--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.4.6",
+    "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.5",
-    "@sanity/client": "^3.4.1",
-    "@sanity/image-url": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
