--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-tooltip": "^4.4.3",
     "sass": "^1.55.0",
     "typewriter-effect": "^2.19.0",
