--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.4.6",
     "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.5",
@@ -21,6 +22,7 @@
     "react-scroll": "^1.8.9",
     "react-tooltip": "^4.4.3",
     "sass": "^1.55.0",
+    "swiper": "^11.2.10",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
